Fix spacing issue on Chrome

--- a/style.css
+++ b/style.css
@@ -120,11 +120,11 @@ body {
     height: 1rem;
     flex-direction: column;
     font-size: 1.5rem;
-    margin-top: 1rem;
+    margin-top: 1.5rem;
 }
 #searchbox > * {
     align-self: center;
-    margin: 0.2rem 0 0 0;
+    margin-bottom: 0.5rem;
 }
 #searchbox > label {
     font-weight: bolder;
